# acr_telemetry

./: .gitignore  Cargo.toml  LICENSE  README.md  acr_recorder_stop.bat  acr_stop.bat  acr_telemetry_bridge.toml  analyze_db.rs  analyze_telemetry_tables.py
acr-voicenote/: Cargo.toml  README.md  config.example.toml  config.toml
acr-voicenote/src/: config.rs  main.rs  whisper_mod.rs
acr-voicenote/src/whisper_mod/: multilingual.rs
acr_receiver/: README.md  index.html
batch/: acr_marker_bad.bat  acr_marker_good.bat  acr_note_aborted.bat  acr_note_good.bat  acr_stop.bat
config-examples/: acr_recorder.toml  acr_telemetry_bridge.toml  telemetry_color.toml
docs/: BRIDGE.md  EXPORT.md  FIELDS.md  GRAPHICS_STATICS_FIELDS.md  RTSS_OVERLAY.md
grafana/: AC Rally compare-1772042640439.json  AC Rally comparison-1771806718721.json  AC Rally full-1772042621065.json  AC Rally full-dashboard.json  ANALYSIS_RANGES.md  ANNOTATIONS.md  DASHBOARD_SETUP.md
installer/: README.md
reference_tracks/: col_de_turini.dbf  col_de_turini.shp  col_de_turini.shx  hafren_north.dbf  hafren_north.qix  hafren_north.shp  hafren_north.shx  hafren_south.dbf  hafren_south.shp  hafren_south.shx  livigno.dbf  livigno.shp  livigno.shx  saverne.dbf  saverne.shx  sisteron.dbf  sisteron.shp  sisteron.shx  valee_de_munster.dbf  valee_de_munster.shp  valee_de_munster.shx
src/: color_config.rs  config.rs  format_meta.rs  hotkey.rs  lib.rs  main.rs  notes.rs  record.rs  recorder.rs  rtss_osd.rs  timing_db.rs
telemetry_notes/: acr_notes
timing/: saverne.dbf  saverne.shp  sectors.dbf  sectors.shp  (+1 more)
(+7 files in other folders)
