[package]
name = "acr_recorder"
version = "0.1.0"
edition = "2024"

[lib]
name = "acr_recorder"
path = "src/lib.rs"

[[bin]]
name = "acr_recorder"
path = "src/main.rs"

[[bin]]
name = "acr_export"
path = "src/bin/acr_export.rs"

[[bin]]
name = "acr_telemetry_bridge"
path = "src/bin/acr_telemetry_bridge.rs"

[dependencies]
acc_shared_memory_rs = { path = "vendor/acc_shared_memory_rs" }
rkyv = { version = "0.7", features = ["std"] }
ctrlc = "3.4"
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
dirs = "5.0"
tiny_http = "0.12"
