[package]
name = "acr-voicenote"
version = "0.1.0"
edition = "2021"
description = "Voice-to-text for conferences: append transcriptions with timestamps to file or UDP"
authors = ["ACR"]

[dependencies]
# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio
cpal = "0.15"

# Speech-to-Text: Candle-Whisper (reines Cargo)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.21"
rand = "0.9"

# CLI & Utils
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"

[[bin]]
name = "acr-voicenote"
path = "src/main.rs"
